fix banner overlap

--- a/src/Modules/Home/bootstrap.scss
+++ b/src/Modules/Home/bootstrap.scss
@@ -19,7 +19,7 @@
 }
 .home__page {
   .main-banner {
-    min-height: 90vh;
+    min-height: 40vh;
     .owl-carousel {
       position: relative;
       .bg__slider {
